# Hiyori

./: .dockerignore  Cargo.toml
migrations/: 20230304065003_initial.sql  20230517050427_initial.sql
src/: configs.rs  main.rs
src/database/: books.rs  collections.rs  images.rs  mod.rs
src/routes/: books.rs  collections.rs  images.rs  mod.rs
