[package]
name = "hiyori"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
cuid2 = "0.1.0"
tokio = { version = "1.26.0", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
] }
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "mysql",
    "migrate",
] }
log = "0.4.17"
actix-multipart = "0.6.0"
actix-cors = "0.6.4"
epub = "2.0.0"
itertools = "0.10.5"
