[package]
name = "hiyori"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
cuid2 = "0.1.0"
tokio = { version = "1.28.1", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
] }
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "mysql",
    "migrate",
] }
log = "0.4.17"
actix-multipart = "0.6.0"
actix-cors = "0.6.4"
epub = "2.0.0"
itertools = "0.10.5"
figment = { version = "0.10.8", features = ["env"] }
actix-web-lab = "0.19.1"
lazy_static = "1.4.0"
regex = "1.8.1"
